# arzamas

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  note.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  user_auth_token.rs  user_authentication.rs  user_confirmation.rs  user_credentials.rs  user_otp_token.rs  user_recovery_password.rs  user_restore_password.rs  user_security_settings.rs  user_session.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000000_user_table.rs  m20220101_000001_create_user_confirmation_table.rs  m20220101_000001_create_user_notes_table.rs  m20220101_000001_create_user_table.rs  m20220101_000001_user_auth_token_table.rs  m20220101_000001_user_authentication_table.rs  m20220101_000001_user_confirmation_table.rs  m20220101_000001_user_credentials.rs  m20220101_000001_user_notes_table.rs  m20220101_000001_user_otp_token_table.rs  m20220101_000001_user_recovery_password_table.rs  m20220101_000001_user_restore_password_table.rs  m20220101_000001_user_security_setting_table.rs  m20220101_000001_user_sessions_table.rs  m20220101_000001_user_table.rs  m20240617_091223_add_new_email_to_user_confirmation.rs
script/: init-db.sh
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/dto/: many_response.rs  mod.rs
src/application/dto/note/: mod.rs  note_request_dto.rs  note_response_dto.rs
src/application/dto/shared/: mod.rs  page_query.rs  paginated_result.rs  universal_response.rs
src/application/dto/user/: mod.rs  user_authentication_request_dto.rs  user_authentication_response_dto.rs  user_recovery_request_dto.rs  user_registration_request_dto.rs  user_registration_response_dto.rs  user_security_request_dto.rs  user_security_response_dto.rs  user_shared_request_dto.rs  user_shared_response_dto.rs
src/application/error/: error.rs  mod.rs  response_error.rs  service_error.rs
src/application/services/: mod.rs  service_container.rs
src/application/services/note/: service.rs
src/application/services/user/: mod.rs
src/application/services/user/authentication/: service.rs
src/application/services/user/information/: service.rs
src/application/services/user/recovery/: service.rs
src/application/services/user/registration/: service.rs
src/core/: config.rs  constants.rs  db.rs  email.rs  mod.rs  redis.rs  startup.rs  telemetry.rs
src/core/api/: mod.rs  utoipa.rs
src/core/constants/: core_constants.rs  emojis.rs  mod.rs
src/core/error/: application_error.rs  mod.rs  server_error.rs
src/core/middleware/: rate_limiter.rs
src/domain/: error.rs  mod.rs
src/domain/entities/: mod.rs
src/domain/entities/caching/: caching.rs
src/domain/entities/email/: email.rs  mod.rs
src/domain/entities/note/: mod.rs  note.rs  value_objects.rs
src/domain/entities/shared/: mod.rs  value_objects.rs
src/domain/entities/user/: mod.rs  user.rs  user_authentication.rs  user_base.rs  user_otp_token.rs  user_recovery_password.rs  user_registration.rs  user_restore_password.rs  user_security_settings.rs  user_sessions.rs  value_objects.rs
src/domain/note/: mod.rs  note.rs
src/domain/ports/: mod.rs
src/domain/ports/caching/: caching.rs
src/domain/ports/email/: email.rs
src/domain/ports/repositories/note/: mod.rs  (+2 more)
src/domain/repositories/note/: note_parameters.rs  note_repository.rs
src/domain/repositories/user/: mod.rs  user_authentication_parameters.rs  user_authentication_repository.rs  user_parameters.rs  user_registration_parameters.rs  user_registration_repository.rs  user_repository.rs  user_security_settings_repository.rs  user_shared_parameters.rs  user_shared_repository.rs
src/domain/services/: mod.rs
src/domain/services/note/: mod.rs  note_service.rs  note_validation_service.rs
src/domain/services/shared/: mod.rs  shared.rs  shared_service.rs
src/domain/services/user/: mod.rs  user_authentication_service.rs  user_credential_service.rs  user_information_service.rs  user_recovery_password_service.rs  user_registration_service.rs  user_restore_password_service.rs  user_security_settings_service.rs  user_validation_service.rs
src/infrastructure/: mod.rs
src/infrastructure/app_state/: app_state.rs
src/infrastructure/cache/: error.rs  mod.rs  redis.rs  redis_adapter.rs
src/infrastructure/email/: error.rs  lettre_email_adapter.rs  mod.rs
src/infrastructure/error/: error.rs
src/infrastructure/middleware/: rate_limiter.rs
src/infrastructure/persistence/: db.rs
src/infrastructure/repository/: error.rs  mod.rs
src/infrastructure/repository/note/: mod.rs  seaorm_note.rs  seaorm_note_helper.rs  seaorm_note_repository.rs  seaorm_note_service.rs
src/infrastructure/repository/user/: mod.rs  seaorm_user.rs  seaorm_user_authentication.rs  seaorm_user_helper.rs  seaorm_user_recovery.rs  seaorm_user_registration.rs  seaorm_user_security.rs
src/infrastructure/web/: mod.rs
src/infrastructure/web/actix_adapter/: actix_adapter.rs
src/infrastructure/web/api/: mod.rs  utoipa.rs
src/infrastructure/web/middleware/: auth.rs  mod.rs  rate_limiter.rs
src/infrastructure/web/notes/: controllers.rs  dto_models.rs  mod.rs
src/models/: many_response.rs  mod.rs  response.rs  server_error.rs  service_error.rs  user.rs
src/modules/: mod.rs
src/modules/auth/: controller.rs  controllers.rs  credentials.rs  email.rs  middleware.rs  mod.rs  models.rs  service.rs  session.rs  totp.rs  utils.rs
src/modules/general_handlers/: controller.rs  mod.rs
src/modules/notes/: controller.rs  controllers.rs  mod.rs  models.rs  service.rs
src/modules/user/: controller.rs  controllers.rs  mod.rs  models.rs  service.rs  utils.rs
src/modules_deprecated/auth/: credentials.rs  email.rs  mod.rs  models.rs  service.rs  session.rs  totp.rs  utils.rs
src/modules_deprecated/user/: service.rs  utils.rs
src/user_interface/web/actix_adapter/: actix_adapter.rs  mod.rs
src/user_interface/web/api/: mod.rs
src/user_interface/web/dto/: shared.rs
src/user_interface/web/handlers/: mod.rs
src/user_interface/web/middleware/: auth.rs  rate_limiter.rs
(+49 files in other folders)
