[package]
name = "arzamas"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

[lib]
path = "src/lib.rs"
name = "lib"

[[bin]]
path = "src/main.rs"
name = "bin"

[dependencies]
actix-web = "4.3.1"
actix-http = "3.3.1"
actix-files = "0.6.2"
actix-service = "2.0.2"
actix-cors = "0.6.4"

dotenv = "0.15.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
jsonwebtoken = "8.3.0"

futures = "0.3.28"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-appender = "0.2.2"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }

redis = { version = "0.23.0", features = ["tokio-comp", "tokio-native-tls-comp", "connection-manager"] }

chrono = "0.4.24"
hex = "0.4.3"
sha2 = "0.10.6"
regex = "1.8.1"
rust-argon2 = "2.0.0"
lazy_static = "1.4.0"
unicode-normalization = "0.1.22"
getrandom = "0.2.9"
time = "0.3.20"
async_once="0.2.1"
tokio-async-std = "1.5.3"
uuid = { version = "1.3.2", features = [ "v4" ] }
rand = "0.8.5"
totp-rs = "5.0.1"
tiny-bip39 = "1.0.0"
base32 = "0.4.0"
url = "2.3.1"

entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.sea-orm]
version = "0.12.1"
default-features = true
features = ["mock", "default", "with-json", "macros", "sqlx-postgres", "runtime-actix-rustls", "chrono", "postgres-array"]

[dev-dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
once_cell = "1.17.1"
uuid = { version = "1.3.2", features = ["v4"] }
serde_json = "1.0.96"

[dependencies.lettre]
version = "0.10.4"
default-features = false
features = [
    "smtp-transport",
    "tokio1",
    "native-tls",
    "tokio1-native-tls",
    "hostname",
    "builder",
    "tracing",
]
