[package]
name = "arzamas"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

[lib]
path = "src/lib.rs"
name = "lib"

[[bin]]
path = "src/main.rs"
name = "bin"

[dependencies]
actix-web = "4.7"
actix-http = "3.7"
actix-files = "0.6"
actix-service = "2.0"

dotenv = "0.15"
secrecy = { version = "0.8", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
jsonwebtoken = "9.3"

futures = "0.3"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-appender = "0.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

redis = { version = "0.25", features = ["tokio-comp", "tokio-native-tls-comp", "connection-manager"] }
deadpool-redis = "0.15"

chrono = "0.4"
hex = "0.4"
sha2 = "0.10"
regex = "1.10"
argon2 = "0.5"
lazy_static = "1.4"
unicode-normalization = "0.1"
getrandom = "0.2"
time = { version = "0.3", features = ["local-offset"] }
async_once = "0.2"
tokio-async-std = "1.5"
uuid = { version = "1.8", features = ["v4"] }
rand = "0.8"
totp-rs = "5.5"
qrcode = "0.14.0"
base32 = "0.5"
url = "2.5"

entity = { path = "entity" }
migration = { path = "migration" }

utoipa = { version = "4.2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1", features = ["actix-web"] }
utoipa-rapidoc = { version = "4.0", features = ["actix-web"] }
async-trait = "0.1"
env_logger = "0.11"
mime_guess = "2.0.4"

[dependencies.sea-orm]
version = "0.12"
default-features = true
features = ["default", "with-json", "macros", "sqlx-postgres", "runtime-actix-rustls", "chrono", "postgres-array"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
uuid = { version = "1.8", features = ["v4"] }
serde_json = "1.0"

[dependencies.lettre]
version = "0.11"
default-features = false
features = [
    "smtp-transport",
    "tokio1",
    "native-tls",
    "tokio1-native-tls",
    "hostname",
    "builder",
    "tracing",
]
